Partial_14Dec2021/force-app/main/default/objects/Attendance_Expense__c/Attendance_Expense__c.object-meta.xml
<CustomObject>
    <label>Attendance Expense</label>
    <nameField>
        <displayFormat>AE-{0000000}</displayFormat>
        <label>Attendance Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendance Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>