Partial_14Dec2021/force-app/main/default/objects/Attendance_Expense__c/fields/Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_Id__c</fullName>
    <formula>UserName__r.EmployeeNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Id</label>
    <type>Text</type>
</CustomField>