Partial_14Dec2021/force-app/main/default/objects/Attendance_Expense__c/fields/Ex_Station__c.field-meta.xml
<CustomField>
    <fullName>Ex_Station__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Ex-Station</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>