Partial_14Dec2021/force-app/main/default/objects/Attendance_Expense__c/fields/HeadQuarter__c.field-meta.xml
<CustomField>
    <fullName>HeadQuarter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>HeadQuarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>