Partial_14Dec2021/force-app/main/default/objects/Attendance_Expense__c/fields/Headquarter_Metro__c.field-meta.xml
<CustomField>
    <fullName>Headquarter_Metro__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Headquarter-Metro</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>