Partial_14Dec2021/force-app/main/default/objects/Attendance_Expense__c/fields/Outstation__c.field-meta.xml
<CustomField>
    <fullName>Outstation__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Outstation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>