Partial_14Dec2021/force-app/main/default/objects/Attendance_Expense__c/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Attendance_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>